UX: Fix alignment issues around user status

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -59,7 +59,7 @@
     font-weight: bold;
   }
 
-  span {
+  > span {
     font-size: var(--font-0);
     margin-right: 8px;
     display: inline-block;
